<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!--Meta-->
    <string name="app_name" translatable="false">ParkenDD</string>
    <string name="version" translatable="false">1.3.0</string>
    <!--actions-->
    <string name="action_settings">Settings</string>
    <string name="action_forecast">Forecast</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_spots">Parking spots</string>
    <string name="action_cities">Cities</string>
    <string name="action_search">Search</string>
    <!--settings-->
    <string name="settings_activity_title">Settings</string>
    <string name="header_general">General</string>
    <string name="header_network">Network</string>
    <string name="setting_server">Server</string>
    <string name="setting_city">City</string>
    <string name="setting_sorting">Sort by</string>
    <string name="setting_sorting_default">Optimal</string>
    <string name="setting_sorting_name">Name</string>
    <string name="setting_sorting_location">Location</string>
    <string name="setting_sorting_available">Available lots</string>
    <string name="settings_about">About the app</string>
    <string name="settings_header_display">Display</string>
    <string name="settings_header_information">Information</string>

    <string-array name="setting_sort_options">
        <item>@string/setting_sorting_default</item>
        <item>@string/setting_sorting_name</item>
        <item>@string/setting_sorting_location</item>
        <item>@string/setting_sorting_available</item>
    </string-array>
    <string name="setting_location">Use location</string>
    <string name="setting_reset">Reset</string>
    <string name="setting_ignore_cert">Ignore SSL certificate (unsafe!)</string>
    <string name="setting_hide_closed">Hide closed spots.</string>
    <string name="setting_hide_nodata">Hide spots without data.</string>
    <string name="setting_hide_full">Hide full spots.</string>
    <string name="setting_city_auto">Automatically</string>
    <string name="active_support">Use only supported cities.</string>
    <string name="map_icon_size">Map icon size</string>
    <!--defaults-->
    <string name="serveraddress" translatable="false">https://api.parkendd.de/</string>
    <string name="default_city" translatable="false">@string/setting_city_auto</string>
    <!--about-->
    <string name="app_url" translatable="false">https://parkendd.de/</string>
    <string name="disclaimer">No responsibility is taken for the correctness of this information!</string>
    <string name="license_url" translatable="false">https://github.com/jklmnn/ParkenDD</string>
    <string name="license">The licenses of this app and used libraries can be viewed here.</string>
    <string name="server">Contact to server:</string>
    <!--slotstates-->
    <string name="closed">closed</string>
    <string name="nodata">n/a</string>
    <string name="open">open</string>
    <!--alerts-->
    <string name="alert_reset">Reset to default?</string>
    <string name="alert_active_support">Unsupported cities can not be guaranteed to work.</string>
    <!--pos/neg button-->
    <string name="positive">Ok</string>
    <string name="negative">Cancel</string>
    <!--errors-->
    <!--<string name="network_error">Error on receiving data.</string>
    <string name="invalid_error">Received invalid data.</string>
    <string name="location_error">Could not access location.</string>
    <string name="url_error">Invalid URL</string>-->
    <string name="server_error">Server error</string>
    <string name="connection_error">Connection error</string>
    <string name="intent_error">No suitable application found.</string>
    <string name="no_address_error">No address found.</string>
    <string name="last_update">Last update</string>
    <!--view-->
    <string name="of">of</string>
    <string name="title_activity_forecast" translatable="false">@string/action_forecast</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="available">Available</string>
    <string name="count">Count</string>
    <string name="distance">Distance</string>
    <string name="type">Type</string>
    <string name="state">State</string>
    <string name="map">Map</string>
    <string name="title_activity_place" translatable="false">PlaceActivity</string>
    <string name="address">Address</string>
    <!--parking types-->
    <string name="Tiefgarage">underground car park</string>
    <string name="Parkplatz">car park</string>
    <string name="Parkhaus">parking garage</string>
    <string name="invalid_error">Received invalid data.</string>
    <string name="location_error">Could not access location.</string>
    <string name="network_error">Error on receiving data.</string>
    <string name="url_error">Invalid URL.</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>

    <!--city list-->
    <string name="cities_activity_title">Available cities</string>
    <string name="chosen_city">Currently selected city</string>
    <string name="free">%1$d\\%% free</string>
    <string name="search_hint">Enter an address</string>


</resources>
