<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Views.Main.MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"/>
    <item android:id="@+id/action_cities"
        android:title="@string/action_cities"
        android:icon="@drawable/ic_location_city_black_24dp"/>

    <group android:id="@+id/nav_drawer_fragments"
        android:checkableBehavior="single">
        <item android:id="@+id/action_spots"
            android:title="@string/action_spots"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:checked="true"/>
        <item android:id="@+id/action_map"
            android:title="@string/map"
            android:icon="@drawable/ic_map_black_24dp" />

        <item android:id="@+id/action_forecast"
            android:title="@string/action_forecast"
            android:icon="@drawable/ic_schedule_black_24dp"/>
    </group>

</menu>